--- a/src/index.scss
+++ b/src/index.scss
@@ -37,15 +37,17 @@ HEADER AND NAVIGATION
 =======================================
 */
 
+
 header {
   background-color: $black;
   color: white;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: end;
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 10;
 
   p {
     padding: 0.5rem 1rem 0.5rem 1rem;
@@ -67,7 +69,7 @@ header {
 }
 
 .sidenav {
-  height: 100vh;
+  height: 100%;
   width: 70vw;
   position: fixed;
   top: 0;
@@ -81,13 +83,14 @@ header {
   align-items: center;
   text-align: center;
   gap: 1rem;
+  z-index: 10;
 
-  & > .avatar {
+  &>.avatar {
     width: 10rem;
     height: 10rem;
     border-radius: 50%;
 
-    & > img {
+    &>img {
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -95,17 +98,18 @@ header {
     }
   }
 
-  & > .name {
+  &>.name {
     font-size: 22px;
     font-weight: 700;
   }
 
-  & > .desc {
+  &>.desc {
     font-size: 18px;
     font-weight: 400;
     color: rgba(255, 255, 255, 0.8);
     max-width: 32ch;
   }
+
 }
 
 .show-nav {
@@ -118,11 +122,11 @@ header {
   flex-direction: column;
   margin-top: 1rem;
 
-  & > :nth-child(4) {
+  &>:nth-child(4) {
     border-bottom: none;
   }
 
-  & > li {
+  &>li {
     padding: 1.25rem;
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     text-align: center;
@@ -130,7 +134,7 @@ header {
     transition: all 300ms ease-in-out;
   }
 
-  & > li:hover {
+  &>li:hover {
     color: $red;
     background-color: $white;
   }
@@ -147,6 +151,7 @@ header {
   }
 }
 
+
 /*
 =======================================
 BEGIN CONTENT CSS
@@ -159,7 +164,7 @@ BEGIN CONTENT CSS
   align-items: center;
   justify-content: center;
 
-  & > :nth-child(1) > img {
+  &> :nth-child(1)>img {
     height: 20vh;
     object-fit: cover;
   }
@@ -192,11 +197,11 @@ BEGIN CONTENT CSS
   .content {
     width: 75vw;
 
-    & > :nth-child(1) {
+    &>:nth-child(1) {
       width: 100%;
       height: 50vh;
 
-      & > img {
+      &>img {
         width: 100%;
         height: 100%;
         object-fit: cover;
